--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Sobre mí</a></li>
                 <li><a href="#">Contacto</a></li>
+                <li><a href="#">Chubby</a></li>
             </ul>
         </nav>
     </header>
