se modifico el nombre del archivo y el color de la fuente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a mi blog</h1>
+        <h1>Bienvenide</h1>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
