se agrego una linea de texto sugiriendo comentar

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a mi blog</h1>
+        <h1>Te doy la bienvenida a master</h1>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
@@ -27,6 +27,7 @@
                     <br> 
                     Aquí compartimos opiniones de aperecciación al arte.</p>
                 <p>Espero que nos llevemos bien</p>
+                <p>Escribe aquí todos tus comentarios</p>
                 <!-- Agregar más contenido según sea necesario -->
             </section>
             <img src="DALLE_chubby_duck_taking_a_bath.jpg" alt="caricatura de un patito redondo bañándose" id="imagen-blog">
