--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
             </ul>
         </nav>
     </header>
+    <img src="DALLE_chubby_duck_taking_a_bath.jpg" alt="caricatura de un patito redondo bañándose" id="imagen-blog">
     <main>
         <article>
             <h2>Hola, bienvenide a chubby duck!</h2>
@@ -26,10 +27,13 @@
                 <p>Este es el comienzo de mi primer post en el blog.
                     <br> 
                     Aquí compartimos opiniones de aperecciación al arte.</p>
-                <p>Escribe aquí todos tus comentarios</p>
-                <!-- Agregar más contenido según sea necesario -->
+                <!-- Agregar más contenido -->
             </section>
-            <img src="DALLE_chubby_duck_taking_a_bath.jpg" alt="caricatura de un patito redondo bañándose" id="imagen-blog">
+            <div class="texto">
+                Aquí va tu texto que será alineado a la izquierda
+                <br>
+                pero estará posicionado en el lado derecho.
+            </div>
         </article>
     </main>
     <footer>
